# voiceprint-2fa

./: .env.sample  .gitignore  README.md  compose.yml
.github/workflows/: development.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d0a70288635_initdb.py  84a4c4451d77_initdb.py  8b5adab6a872_initdb.py
backend/app/: crud.py  main.py  schemas.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: auth.py  private.py  user.py
backend/app/core/: __init__.py  audio.py  engine.py  logger.py  security.py  settings.py
backend/app/database/: __init__.py  conn.py  models.py  seeder.py
backend/scripts/: enable-vector.sh  preprocessing.py  start.sh  tester.py
frontend/: Dockerfile  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: audio-player.tsx  audio-recorder.tsx  mode-toggle.tsx  private-route.tsx  public-route.tsx  recordings-list.tsx  step-route.tsx
frontend/src/context/: auth-provider.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: dashboard.tsx  enroll-voice.tsx  home.tsx  login.tsx  register.tsx  test-recoder.tsx  verify-voice.tsx
frontend/src/schemas/: auth.ts
frontend/src/types/: auth.ts  recording.ts
