[project]
name = "voiceprint-2fa"
version = "0.1.0"
description = "Voiceprint-based two-factor authentication system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.122.0",
    "pgvector>=0.4.1",
    "speechbrain>=1.0.3",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.7",
]
