[project]
name = "app"
version = "0.1.0"
description = "Voiceprint-based two-factor authentication system."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.122.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.1",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "sqlalchemy[asyncio]>=2.0.44",
    "webrtcvad-wheels>=2.0.14",
]

[tool.uv]
# torchaudio 2.9 is not compatible with the currently installed speechbrain.
# It uses deprecated APIs (load_audio_backends) that were removed in torchaudio 2.9.
override-dependencies = [
    "torchaudio<2.9",
    "huggingface-hub==0.16.4",
    "bcrypt<5.0.0",  # See: https://foss.heptapod.net/python-libs/passlib/-/issues/196.
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "httpx>=0.28.1",
    "ruff>=0.14.7",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "PIE", "W", "TID"]
ignore = ["E501"]
